multiple style fixes 1. change body color to dark blue 2. widen logo click target area to contents 3. ensure no orphans on work card titles 4. change nav text to white to improve contrast ratio 5. update scroll-to-top text

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -13,8 +13,8 @@ $font-playfair: 'Playfair Display', serif;
 $body-color: #fff;
 $primary-color: $poppy;
 $secondary-color: $dark-blue;
-$text-color: #9D9EA5;
-$text-color-dark: #00113E;
+$text-color: $dark-blue;
+$text-color-dark: $dark-blue;
 $site-ease: cubic-bezier(0.36, 0.03, 0, 0.91);
 $gray: #F7F9FF;
 $dark-gray: #646569;
