--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -19,15 +19,16 @@
   .navbar-brand{
     padding: 0;
     margin: 0;
-    width: 78px;
     img{
       height: auto;
       width: 100%;
     }
     .small-logo {
       display: none;
+      transition: width .5s cubic-bezier(0.075, 0.82, 0.165, 1);
       @media screen and (max-width: 768px) {
         display: inherit;
+        width: 78px;
       }
     }
     .large-logo {
@@ -44,7 +45,7 @@
     }
     .nav-link{
       font-family: $secondary-font;
-      color: $text-color;
+      color: $white;
       transition: all .3s ease;
       padding: 15px 18px;
       position: relative;
@@ -95,6 +96,10 @@
     box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.09);
     @include mobile{
       padding: 15px;
+    }
+
+    .navbar-brand .small-logo {
+      width: 50px;
     }
 
     .navbar-brand .large-logo {
