--- a/assets/scss/components/_project.scss
+++ b/assets/scss/components/_project.scss
@@ -22,7 +22,7 @@
       }
       span{
         font-family: $secondary-font;
-        color: $primary-color;
+        color: $text-color;
         display: block;
         margin-bottom: 10px;
       }
