--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -58,3 +58,9 @@ h2#design-brief {
         margin-bottom: 18px;
     }
 }
+
+@media (min-width: 1500px) {
+    .container {
+        max-width: 1440px;
+    }
+}
